[gd_scene load_steps=5 format=3 uid="uid://4ko1lo1dtwmt"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_2wuew"]
[ext_resource type="Texture2D" uid="uid://cpcsb6tybsnoc" path="res://sprites/player.png" id="2_emk7i"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_vt1c8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6ix2o"]
radius = 16.6667
height = 54.0

[node name="CharacterBody2D" type="CharacterBody2D"]
floor_constant_speed = true
script = ExtResource("1_2wuew")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_6ix2o")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_right_margin = 0.1

[node name="JumpingTimer" type="Timer" parent="."]
wait_time = 0.053
one_shot = true

[node name="upBufferTimer" type="Timer" parent="."]
wait_time = 0.073
one_shot = true

[node name="coyoteTimer" type="Timer" parent="."]
wait_time = 0.193
one_shot = true

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("2_vt1c8")

[node name="Player" type="Sprite2D" parent="Smoothing2D"]
position = Vector2(4, -2.38419e-07)
scale = Vector2(2.20312, 2.20312)
texture = ExtResource("2_emk7i")
